--- a/src/main/resources/gui/fxml/AdminMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminMenu.fxml
@@ -13,45 +13,8 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1160.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="0.0" prefWidth="124.0">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="148.0" text="Promos">
-               <VBox.margin>
-                  <Insets bottom="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="126.0" text="Categories" wrapText="true">
-               <VBox.margin>
-                  <Insets bottom="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="142.0" text="Users">
-               <VBox.margin>
-                  <Insets bottom="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="155.0" text="Requests">
-               <VBox.margin>
-                  <Insets bottom="30.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" prefHeight="42.0" prefWidth="165.0" text="Add A New Manager" textAlignment="CENTER" wrapText="true" />
-         </children>
-      </VBox>
       <HBox prefHeight="720.0" prefWidth="1021.0">
          <children>
             <ImageView fitHeight="188.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true">
@@ -140,7 +103,7 @@
                         </VBox>
                         <VBox alignment="TOP_CENTER" prefHeight="396.0" prefWidth="145.0">
                            <children>
-                              <Button mnemonicParsing="false" style="-fx-background-color: #3369ff; -fx-display: inline-block; -fx-color: #FFFFFF;" text="Edit Info">
+                              <Button mnemonicParsing="false" style="-fx-background-color: #3369ff; -fx-display: inline-blck; : FFFF;" text="Edit Info">
                                  <VBox.margin>
                                     <Insets top="50.0" />
                                  </VBox.margin>
@@ -162,7 +125,7 @@
             </VBox>
          </children>
       </HBox>
-      <VBox alignment="TOP_RIGHT" prefHeight="720.0" prefWidth="135.0">
+      <VBox alignment="TOP_RIGHT" prefHeight="720.0" prefWidth="138.0">
          <children>
             <ImageView fitHeight="30.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
