--- a/src/main/resources/gui/fxml/PromoManager.fxml
+++ b/src/main/resources/gui/fxml/PromoManager.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -8,97 +9,104 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1021.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox prefHeight="720.0" prefWidth="137.0">
+      <VBox prefHeight="720.0" prefWidth="340.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            <HBox prefHeight="51.0" prefWidth="269.0">
                <children>
-                  <Label text="Start Date: ">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <Label text="Start Date">
+                     <HBox.margin>
+                        <Insets left="10.0" top="15.0" />
+                     </HBox.margin>
                   </Label>
+                  <DatePicker>
+                     <HBox.margin>
+                        <Insets left="60.0" top="10.0" />
+                     </HBox.margin>
+                  </DatePicker>
                </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            </HBox>
+            <HBox prefHeight="51.0" prefWidth="269.0">
                <children>
-                  <Label text="End Date:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <Label text="End Date">
+                     <HBox.margin>
+                        <Insets left="10.0" right="5.0" top="15.0" />
+                     </HBox.margin>
                   </Label>
+                  <DatePicker>
+                     <HBox.margin>
+                        <Insets left="60.0" top="10.0" />
+                     </HBox.margin>
+                  </DatePicker>
                </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            </HBox>
+            <HBox prefHeight="51.0" prefWidth="269.0">
                <children>
-                  <Label text="Code:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <Label text="Code">
+                     <HBox.margin>
+                        <Insets left="10.0" right="25.0" top="15.0" />
+                     </HBox.margin>
                   </Label>
+                  <TextField>
+                     <HBox.margin>
+                        <Insets left="62.0" top="10.0" />
+                     </HBox.margin>
+                  </TextField>
                </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            </HBox>
+            <HBox prefHeight="51.0" prefWidth="269.0">
                <children>
-                  <Label text="Off Percentage">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
+                  <Label prefHeight="17.0" prefWidth="90.0" text="Off Percentage">
+                     <HBox.margin>
+                        <Insets left="10.0" right="25.0" top="15.0" />
+                     </HBox.margin>
                   </Label>
+                  <TextField>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                  </TextField>
                </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            </HBox>
+            <HBox prefHeight="75.0" prefWidth="302.0">
                <children>
-                  <Label text="Maximum Off">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
+                  <Button mnemonicParsing="false" text="Add">
+                     <HBox.margin>
+                        <Insets left="80.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button mnemonicParsing="false" text="Update">
+                     <HBox.margin>
+                        <Insets left="40.0" top="15.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            </HBox>
+            <TableView prefHeight="200.0" prefWidth="200.0">
+              <columns>
+                <TableColumn prefWidth="301.0" text="Username" />
+              </columns>
+            </TableView>
+            <HBox prefHeight="50.0" prefWidth="302.0">
                <children>
-                  <Button mnemonicParsing="false" text="Update" />
+                  <TextField promptText="Username">
+                     <HBox.margin>
+                        <Insets left="75.0" top="15.0" />
+                     </HBox.margin>
+                  </TextField>
                </children>
-            </VBox>
-         </children>
-      </VBox>
-      <VBox prefHeight="720.0" prefWidth="137.0">
-         <children>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
+            </HBox>
+            <HBox prefHeight="30.0" prefWidth="302.0">
                <children>
-                  <DatePicker />
+                  <Button mnemonicParsing="false" text="Add">
+                     <HBox.margin>
+                        <Insets left="130.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
-               <children>
-                  <DatePicker />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
-               <children>
-                  <TextField />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
-               <children>
-                  <TextField />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
-               <children>
-                  <TextField />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="52.0" prefWidth="137.0">
-               <children>
-                  <Button mnemonicParsing="false" text="Add" />
-               </children>
-            </VBox>
+            </HBox>
          </children>
       </VBox>
       <TableView prefHeight="720.0" prefWidth="757.0">
