--- a/src/main/resources/gui/fxml/OrderItem.fxml
+++ b/src/main/resources/gui/fxml/OrderItem.fxml
@@ -8,7 +8,8 @@
 <?import javafx.scene.text.Text?>
 
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="147.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
+fx:controller="view.gui.OrderItemController">
    <children>
       <VBox alignment="CENTER_LEFT" prefHeight="147.0" prefWidth="243.0">
          <padding>
