--- a/src/main/resources/gui/fxml/AllProducts.fxml
+++ b/src/main/resources/gui/fxml/AllProducts.fxml
@@ -2,182 +2,62 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TreeView?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.AllProductsController">
-    <top>
-        <VBox prefHeight="97.0" prefWidth="1280.0" BorderPane.alignment="CENTER">
-            <children>
-                <HBox fx:id="toolbarHBox" prefHeight="90.0" prefWidth="1200.0" />
-                <HBox prefHeight="39.0" prefWidth="1200.0">
-                    <children>
-                  <HBox prefHeight="56.0" prefWidth="271.0">
-                     <children>
-                                <HBox alignment="CENTER" prefHeight="64.0" prefWidth="183.0">
-                           <children>
-                              <MenuBar fx:id="categoryMenuBar" prefHeight="25.0" prefWidth="97.0">
-                                <menus>
-                                  <Menu mnemonicParsing="false" text="category">
-                                    <items>
-                                          <Menu mnemonicParsing="false" text="Unspecified Menu">
-                                            <items>
-                                                <Menu mnemonicParsing="false" text="Unspecified Menu">
-                                                  <items>
-                                                    <MenuItem mnemonicParsing="false" text="Action 1" />
-                                                      <Menu mnemonicParsing="false" text="Unspecified Menu">
-                                                        <items>
-                                                          <MenuItem mnemonicParsing="false" text="Action 1" />
-                                                            <Menu mnemonicParsing="false" text="Unspecified Menu">
-                                                              <items>
-                                                                <MenuItem mnemonicParsing="false" text="Action 1" />
-                                                                  <Menu mnemonicParsing="false" text="Unspecified Menu">
-                                                                    <items>
-                                                                      <MenuItem mnemonicParsing="false" text="Action 1" />
-                                                                    </items>
-                                                                  </Menu>
-                                                              </items>
-                                                            </Menu>
-                                                        </items>
-                                                      </Menu>
-                                                      <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-                                                      <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-                                                  </items>
-                                                </Menu>
-                                            </items>
-                                          </Menu>
-                                          <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-                                      <MenuItem mnemonicParsing="false" text="Close" />
-                                          <MenuItem mnemonicParsing="false" text="Unspecified Action" />
-                                    </items>
-                                  </Menu>
-                                </menus>
-                              </MenuBar>
-                           </children>
-                                </HBox>
-                              <HBox alignment="CENTER" prefHeight="106.0" prefWidth="104.0">
-                                  <children>
-                                      <ImageView fx:id="searchIconImage" fitHeight="56.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true">
-                                          <image>
-                                              <Image url="@../pic/icons8-search-480.png" />
-                                          </image>
-                                      </ImageView>
-                                  </children>
-                              </HBox>
-                     </children>
-                  </HBox>
-                  <Region prefHeight="56.0" prefWidth="833.0" />
-                          <HBox alignment="CENTER" prefHeight="56.0" prefWidth="237.0">
-                              <children>
-                                  <VBox prefHeight="104.0" prefWidth="211.0">
-                                      <children>
-                                          <HBox alignment="CENTER" prefHeight="96.0" prefWidth="200.0">
-                                              <children>
-                                                  <Label prefHeight="26.0" prefWidth="123.0" text="choose background">
-                                       <padding>
-                                          <Insets left="10.0" right="10.0" />
-                                       </padding>
-                                    </Label>
-                                              </children>
-                                          </HBox>
-                                          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-                                              <children>
-                                                  <ColorPicker fx:id="chooseBackgroundColorPicker" />
-                                              </children>
-                                          </HBox>
-                                      </children>
-                                  </VBox>
-                              </children>
-                          </HBox>
-                    </children>
-                </HBox>
-            </children>
-        </VBox>
-    </top>
-    <left>
-        <VBox prefHeight="586.0" prefWidth="167.0" BorderPane.alignment="CENTER">
-            <children>
-                <VBox alignment="CENTER" prefHeight="66.0" prefWidth="167.0">
-                    <children>
-                        <TextField fx:id="brandTextField" prefHeight="37.0" prefWidth="128.0" promptText="brand">
-                            <VBox.margin>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </VBox.margin>
-                            <padding>
-                                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                            </padding>
-                        </TextField>
-                    </children>
-                </VBox>
-                <VBox prefHeight="77.0" prefWidth="167.0">
-                    <children>
-                          <VBox alignment="CENTER" prefHeight="45.0" prefWidth="167.0">
-                              <children>
-                                  <Label text="price" />
-                              </children>
-                          </VBox>
-                          <VBox fx:id="priceVBoxForSlider" alignment="CENTER" prefHeight="33.0" prefWidth="167.0" />
-                    </children>
-                </VBox>
-            <VBox prefHeight="174.0" prefWidth="167.0">
-               <children>
-                          <TextField fx:id="searchTextFieldForName" prefHeight="37.0" prefWidth="149.0" promptText="search name">
-                              <padding>
-                                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                              </padding>
-                          </TextField>
-                            <TreeView fx:id="categoriesTreeView" prefHeight="206.0" prefWidth="167.0" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="46.0" prefWidth="167.0">
-               <children>
-                            <CheckBox fx:id="offCheckBox" mnemonicParsing="false" text="offs" />
-               </children>
-            </VBox>
-                <VBox alignment="CENTER" prefHeight="55.0" prefWidth="167.0">
-                    <children>
-                        <ComboBox fx:id="isAcendingComBowBox" prefHeight="39.0" prefWidth="241.0" />
-                    </children>
-                </VBox>
-                <VBox alignment="CENTER" prefHeight="45.0" prefWidth="167.0">
-                    <children>
-                        <ComboBox fx:id="sortFieldComBowBox" prefHeight="39.0" prefWidth="243.0" />
-                    </children>
-                </VBox>
-            </children>
-        </VBox>
-    </left>
-    <center>
-        <ScrollPane prefHeight="742.0" prefWidth="1540.0" BorderPane.alignment="CENTER">
+<HBox spacing="15.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.AllProductsController">
+   <children>
+      <VBox prefHeight="586.0" prefWidth="167.0" spacing="25.0">
+         <children>
+            <TextField fx:id="nameField" prefHeight="37.0" prefWidth="149.0" promptText="Name">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="brandField" promptText="Brand">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </TextField>
+            <TextField fx:id="descriptionField" layoutX="10.0" layoutY="72.0" promptText="Description">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </TextField>
+            <CheckBox fx:id="offCheckBox" mnemonicParsing="false" text="Show Offs" />
+            <Label text="price" />
+            <ComboBox fx:id="sortDirectionComboBox" prefHeight="39.0" prefWidth="241.0" />
+            <ComboBox fx:id="sortFieldComBowBox" prefHeight="39.0" prefWidth="243.0" />
+            <fx:include source="CategoryList.fxml" fx:id="categoryList"/>
+         </children>
+      </VBox>
+      <ScrollPane prefHeight="500.0" prefWidth="800.0">
          <content>
-            <GridPane fx:id="mainGrid" prefHeight="607.0" prefWidth="1098.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+            <GridPane fx:id="mainGrid">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
             </GridPane>
          </content>
-        </ScrollPane>
-    </center>
-</BorderPane>
+      </ScrollPane>
+   </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
+</HBox>
