--- a/src/main/resources/gui/fxml/CategoryList.fxml
+++ b/src/main/resources/gui/fxml/CategoryList.fxml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="10.0" prefHeight="400.0" spacing="8.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CategoryListController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="10.0" prefHeight="400.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.CategoryListController">
    <children>
       <Label fx:id="currentCategory" text="Category Name:">
          <font>
             <Font size="15.0" />
          </font>
          <VBox.margin>
-            <Insets left="5.0" />
+            <Insets bottom="8.0" left="8.0" right="8.0" top="8.0" />
          </VBox.margin>
       </Label>
+      <Button mnemonicParsing="false" onAction="#goToParent" prefHeight="26.0" prefWidth="249.0" text="Go To Parent Category" />
       <ListView fx:id="categoryList" minWidth="100.0" />
    </children>
-   <padding>
-      <Insets top="5.0" />
-   </padding>
 </VBox>
