--- a/src/main/resources/gui/fxml/CustomersButton.fxml
+++ b/src/main/resources/gui/fxml/CustomersButton.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox fx:id="box" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="view.gui.customer.CustomerButtonController">
+<HBox fx:id="box" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.customer.CustomerButtonController">
    <children>
       <VBox alignment="TOP_CENTER" prefHeight="720.0" prefWidth="100.0" spacing="100.0">
           <children>
