--- a/src/main/resources/gui/fxml/ProductSeller.fxml
+++ b/src/main/resources/gui/fxml/ProductSeller.fxml
@@ -3,11 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-fx:controller="view.gui.product.ProductSellerController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="603.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.product.ProductSellerController">
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0">
          <children>
@@ -59,9 +59,14 @@ fx:controller="view.gui.product.ProductSellerController">
       </HBox>
       <HBox layoutX="210.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <VBox alignment="CENTER" prefHeight="110.0" prefWidth="205.0">
+            <VBox alignment="CENTER" prefHeight="110.0" prefWidth="205.0" spacing="10.0">
                <children>
-                  <Button fx:id="addToCart" mnemonicParsing="false" prefHeight="39.0" prefWidth="96.0" text="add to cart">
+                  <TextField fx:id="amount">
+                     <VBox.margin>
+                        <Insets left="60.0" right="60.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button fx:id="addToCart" mnemonicParsing="false" prefHeight="39.0" prefWidth="129.0" text="add to cart">
                      <padding>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </padding>
