--- a/src/main/resources/gui/fxml/SingleProduct.fxml
+++ b/src/main/resources/gui/fxml/SingleProduct.fxml
@@ -27,7 +27,7 @@
                               <Image url="@../pic/background.jpg" />
                            </image>
                         </ImageView>
-                        <HBox prefHeight="32.0" prefWidth="182.0">
+                        <HBox prefHeight="32.0" prefWidth="182.0" spacing="90.0">
                            <children>
                               <HBox alignment="CENTER" prefHeight="32.0" prefWidth="91.0" spacing="10.0">
                                  <children>
@@ -46,11 +46,7 @@
                                     <Insets left="5.0" right="5.0" />
                                  </HBox.margin>
                               </HBox>
-                              <HBox alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="192.0">
-                                 <children>
-                                    <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="126.0" text="Add to compare list" />
-                                 </children>
-                              </HBox>
+                              <Button mnemonicParsing="false" onAction="#addToCompareList" prefHeight="25.0" prefWidth="126.0" text="Add to Compare List" />
                            </children>
                         </HBox>
                      </children>
@@ -127,7 +123,7 @@
                            <children>
                               <VBox alignment="CENTER" prefHeight="53.0" prefWidth="227.0">
                                  <children>
-                                    <Slider blockIncrement="1.0" majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true">
+                                    <Slider fx:id="rateSlider" blockIncrement="1.0" majorTickUnit="1.0" max="5.0" min="1.0" minorTickCount="0" showTickLabels="true" showTickMarks="true" snapToTicks="true">
                                        <VBox.margin>
                                           <Insets left="10.0" right="10.0" />
                                        </VBox.margin>
@@ -138,8 +134,7 @@
                                  <children>
                                     <HBox prefHeight="100.0" prefWidth="200.0" spacing="15.0">
                                        <children>
-                                          <Button mnemonicParsing="false" text="compare" />
-                                          <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="62.0" text="rate" />
+                                          <Button mnemonicParsing="false" onAction="#rate" prefHeight="26.0" prefWidth="62.0" text="Rate" />
                                        </children>
                                     </HBox>
                                  </children>
