--- a/src/main/resources/gui/fxml/Main.fxml
+++ b/src/main/resources/gui/fxml/Main.fxml
@@ -11,34 +11,34 @@
    <top>
       <HBox fx:id="topBox" spacing="15.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="homeButton" mnemonicParsing="false" text="Home">
+            <Button fx:id="homeButton" mnemonicParsing="false" onAction="#openHome" text="Home">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Region HBox.hgrow="ALWAYS" />
-            <Button fx:id="cartButton" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" text="Cart">
+            <Button fx:id="cartButton" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#openCart" text="Cart">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
             <Region prefWidth="50.0" />
-            <Button fx:id="loginButton" layoutX="1212.0" layoutY="30.0" mnemonicParsing="false" text="Login">
+            <Button fx:id="loginButton" layoutX="1212.0" layoutY="30.0" mnemonicParsing="false" onAction="#openLogin" text="Login">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="registerButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" text="Register">
+            <Button fx:id="registerButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" onAction="#openRegister" text="Register">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="accountButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" text="Account">
+            <Button fx:id="accountButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" onAction="#openAccount" text="Account">
                <font>
                   <Font size="14.0" />
                </font>
             </Button>
-            <Button fx:id="logoutButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" text="Logout">
+            <Button fx:id="logoutButton" layoutX="1200.0" layoutY="30.0" mnemonicParsing="false" onAction="#logout" text="Logout">
                <font>
                   <Font size="14.0" />
                </font>
