--- a/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
+++ b/src/main/resources/gui/fxml/CreateSingleProductForSeller.fxml
@@ -52,7 +52,7 @@
                   <Insets left="10.0" right="10.0" />
                </padding>
             </VBox>
-            <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadPhotoClicked" text="upload photo" />
+            <Button fx:id="imageChooserButton" mnemonicParsing="false" prefHeight="35.0" prefWidth="103.0" text="UploadPhoto" />
             <Button fx:id="clearButton" mnemonicParsing="false" onAction="#clearAllClicked" prefHeight="33.0" prefWidth="91.0" text="clear all" />
             <Button fx:id="saveButton" mnemonicParsing="false" onAction="#saveButtonClicked" prefHeight="34.0" prefWidth="91.0" text="save" />
          </children>
