--- a/src/main/resources/gui/fxml/AdminOptionMenu.fxml
+++ b/src/main/resources/gui/fxml/AdminOptionMenu.fxml
@@ -2,48 +2,54 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="140.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.admin.AdminOptionMenuController">
+
+<HBox fx:id="hbox" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.gui.admin.AdminOptionMenuController">
    <children>
-      <Button fx:id="promoButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Promos">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="100.0" />
-         </VBox.margin>
-      </Button>
-      <Button fx:id="categoryButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Categories">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="100.0" />
-         </VBox.margin>
-      </Button>
-      <Button fx:id="usersButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Users">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="50.0" />
-         </VBox.margin>
-      </Button>
-      <Button fx:id="requestsButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Requests">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <VBox.margin>
-            <Insets bottom="50.0" />
-         </VBox.margin>
-      </Button>
-      <Button fx:id="personalPage" mnemonicParsing="false" prefHeight="36.0" prefWidth="140.0" text="Personal Page">
-         <VBox.margin>
-            <Insets bottom="30.0" />
-         </VBox.margin>
-      </Button>
-      <Button fx:id="newManagerButton" mnemonicParsing="false" prefHeight="47.0" prefWidth="140.0" text="Add a New Manager" wrapText="true" />
+      <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="596.0" prefWidth="140.0">
+         <children>
+            <Button fx:id="promoButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Promos">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="100.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="categoryButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Categories">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="100.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="usersButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Users">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="50.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="requestsButton" mnemonicParsing="false" prefHeight="38.0" prefWidth="140.0" text="Requests">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="50.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="personalPage" mnemonicParsing="false" prefHeight="36.0" prefWidth="140.0" text="Personal Page">
+               <VBox.margin>
+                  <Insets bottom="30.0" />
+               </VBox.margin>
+            </Button>
+            <Button fx:id="newManagerButton" mnemonicParsing="false" prefHeight="47.0" prefWidth="140.0" text="Add a New Manager" wrapText="true" />
+         </children>
+      </VBox>
    </children>
-</VBox>
+</HBox>
